styles navbar and homepage CTA

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header id="main-header">
       <div class="container">
         <div class="header">
-          <h1>Hungry-Hoot</h1>
-          <!-- <img src="images/hungryhoot-logo2.png" alt="hungryhoot logo"> -->
+          <!-- <h1>Hungry-Hoot</h1> -->
+          <img src="images/hungryhoot-logo2.png" alt="hungryhoot logo">
           <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">Features</a></li>
@@ -33,7 +33,7 @@
           perferendis quaerat quae magnam reiciendis quos omnis mollitia deserunt 
           error nam.
         </div>
-        <button class="btn">Learn More</button>
+        <button class="btn">Lets get started</button>
       </div>
     </section>
 
