styling for burger

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           perferendis quaerat quae magnam reiciendis quos omnis mollitia deserunt 
           error nam.
         </div>
-        <button class="btn">Lets get started</button>
+        <button class="btn">Let's get started</button>
       </div>
     </section>
 
