adds carousel template to mealpage

--- a/mealpage.html
+++ b/mealpage.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hungry Hoot Mealpage</title>
     <link rel="stylesheet" href="/css/mealpage.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  </head>
 <body>
   <div id="content-test">
 
@@ -39,8 +40,36 @@
     </section>
     
   </div><!-- end main container -->
-  
 
+  <!-- Create Carousel of Meal Display -->
+  <div class="carousel-body">
+
+    <div class="carousel">
+
+      <div id="images" class="wrapper">
+        <img src="/images/01.jpg" alt="">
+        <img src="/images/02.jpg" alt="">
+        <img src="/images/03.jpg" alt="">
+        <img src="/images/04.jpg" alt="">
+        <img src="/images/05.jpg" alt="">
+        <img src="/images/06.jpg" alt="">
+      </div>
+
+      <div class="buttons">
+
+        <button id="prev">
+          <i class="fa-solid fa-backward"></i>
+        </button>
+
+        <button id="next">
+          <i class="fa-solid fa-forward"></i>
+        </button>
+       
+      </div>
+    </div>
+
+  </div>
+  
   <!-- <script src="js/index.js"></script> -->
   <script src="js/mealpage.js"></script>
   
