complete meal heading and meal image carousel components

--- a/mealpage.html
+++ b/mealpage.html
@@ -47,12 +47,13 @@
       <div class="carousel-body">
         <div class="carousel">
           <div id="images" class="wrapper">
-            <img src="/images/01.jpg" alt="">
-            <img src="/images/02.jpg" alt="">
-            <img src="/images/03.jpg" alt="">
+            <img src="/images/0.jpg" id="meal-image" alt="">
           </div> 
         </div>
       </div>
+
+
+      
     </section>
     
   </div><!-- end main container -->
